end of day push

--- a/index.html
+++ b/index.html
@@ -54,15 +54,48 @@
         <div class="col-4 extra-padding text-center">
           <h3>Features</h3>
           <p class="text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non impedit quis voluptatem
-            voluptas ipsa
-            voluptate nulla voluptates.</p>
+            voluptas ipsa voluptate nulla voluptates.</p>
         </div>
-        <div class="col-4"></div>
-
+        <div class="card-deck text-center">
+          <div class="card bg-grey border-0 extra-padding">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-small">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+          <div class="card bg-grey border-0 extra-padding">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-small">This card has supporting text below as a natural lead-in to additional
+                content.</p>
+            </div>
+          </div>
+          <div class="card bg-grey border-0 extra-padding">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-small">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This card has even longer content than the first to show that equal height action.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 extra-padding"></div>
       </div>
     </div>
   </div>
-
+  <div class="bg-blue">
+    <div class="container">
+      <div class="row">
+        <div class="col-6"><iframe width="500" height="315" src="https://www.youtube.com/embed/Ll1i-ALe4gE"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe></div>
+        <div class="col-6 text-center text-white">
+          <h1>Check out this funny video</h1>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
